Add `/jacob fortune` Command (#14)
