# src/api/swagger.json
@@ -3597,6 +3597,238 @@
         }
       }
     },
+    "/Graph/Medals/now": {
+      "get": {
+        "tags": [
+          "MedalGraphs"
+        ],
+        "parameters": [
+          {
+            "name": "months",
+            "in": "query",
+            "style": "form",
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 2
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ContestBracketsDetailsDto"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ContestBracketsDetailsDto"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ContestBracketsDetailsDto"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/Graph/Medals/{sbYear}/{sbMonth}": {
+      "get": {
+        "tags": [
+          "MedalGraphs"
+        ],
+        "parameters": [
+          {
+            "name": "sbYear",
+            "in": "path",
+            "required": true,
+            "style": "simple",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "sbMonth",
+            "in": "path",
+            "required": true,
+            "style": "simple",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "months",
+            "in": "query",
+            "style": "form",
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 2
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ContestBracketsDetailsDto"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ContestBracketsDetailsDto"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ContestBracketsDetailsDto"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/Graph/Medals/{sbYear}": {
+      "get": {
+        "tags": [
+          "MedalGraphs"
+        ],
+        "parameters": [
+          {
+            "name": "sbYear",
+            "in": "path",
+            "required": true,
+            "style": "simple",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "years",
+            "in": "query",
+            "style": "form",
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 1
+            }
+          },
+          {
+            "name": "months",
+            "in": "query",
+            "style": "form",
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 2
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ContestBracketsDetailsDto"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ContestBracketsDetailsDto"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ContestBracketsDetailsDto"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/Player/{playerUuidOrIgn}": {
       "get": {
         "tags": [
@@ -5014,6 +5246,62 @@
         "type": "integer",
         "format": "int32"
       },
+      "ContestBracketsDetailsDto": {
+        "type": "object",
+        "properties": {
+          "start": {
+            "type": "string"
+          },
+          "end": {
+            "type": "string"
+          },
+          "brackets": {
+            "type": "object",
+            "additionalProperties": {
+              "$ref": "#/components/schemas/ContestBracketsDto"
+            }
+          }
+        },
+        "additionalProperties": false
+      },
+      "ContestBracketsDto": {
+        "type": "object",
+        "properties": {
+          "bronze": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "silver": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "gold": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "platinum": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "diamond": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "ContestMedal": {
+        "enum": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5
+        ],
+        "type": "integer",
+        "format": "int32"
+      },
       "ContestParticipationDto": {
         "type": "object",
         "properties": {
@@ -6211,6 +6499,9 @@
             "type": "integer",
             "format": "int32"
           },
+          "brackets": {
+            "$ref": "#/components/schemas/ContestBracketsDto"
+          },
           "participations": {
             "type": "array",
             "items": {
@@ -6232,7 +6523,14 @@
           "perks": {
             "$ref": "#/components/schemas/JacobPerksDto"
           },
+          "stats": {
+            "$ref": "#/components/schemas/JacobStatsDto"
+          },
           "participations": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "firstPlaceScores": {
             "type": "integer",
             "format": "int32"
           },
@@ -6255,6 +6553,25 @@
           "levelCap": {
             "type": "integer",
             "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "JacobStatsDto": {
+        "type": "object",
+        "properties": {
+          "brackets": {
+            "type": "object",
+            "additionalProperties": {
+              "$ref": "#/components/schemas/ContestMedal"
+            }
+          },
+          "personalBests": {
+            "type": "object",
+            "additionalProperties": {
+              "type": "integer",
+              "format": "int64"
+            }
           }
         },
         "additionalProperties": false
@@ -7038,6 +7355,9 @@
             "nullable": true
           },
           "accessoryBagSettings": {
+            "nullable": true
+          },
+          "bestiary": {
             "nullable": true
           }
         },
